Styling changes to the site. Color for background and spacing issues resolved.

--- a/src/components/common/styles/StaticHomePage.scss
+++ b/src/components/common/styles/StaticHomePage.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1%;
-  margin: 2% 5% 4%;
+  padding: 3% 3% 5%;
   div,
   h2 {
     text-align: center;
